--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,20 @@ Gemfile.lock
 doc/
 pkg/
 vendor/cache/*.gem
+*.gem
+*.rbc
+.bundle
+.config
+.yardoc
+InstalledFiles
+_yardoc
+coverage
+doc/
+lib/bundler/man
+pkg
+rdoc
+spec/reports
+test/tmp
+test/version_tmp
+tmp
+
